--- a/src/index.html
+++ b/src/index.html
@@ -63,12 +63,183 @@
                 на подарочный
                 сертификат
             </div>
-            <button>
-                Подарить
+            <button class="brownBtn">
+                <span>Подарить</span>
             </button>
         </div>
         <div class="main-present__ImgContainer">
             <img src="./assets/images/main/presentImg.jpg" alt="#">
+        </div>
+    </section>
+
+    <section class="main-develop">
+        <div class="main-develop__imgContainer">
+            <img src="./assets/images/main/developBg.jpg" alt="#">
+        </div>
+
+        <div class="main-develop__swiperContainer">
+            <div class="main-develop__positionContainer">
+                <div>
+                    <button class="btnPrev">
+                        <svg>
+                            <use href="#arrowLeft"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="swiper mainDevelop">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="./assets/images/main/swiperImage.jpg" alt="#">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/images/main/swiperImage.jpg" alt="#">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/images/main/swiperImage.jpg" alt="#">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/images/main/swiperImage.jpg" alt="#">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/images/main/swiperImage.jpg" alt="#">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <button class="btnNext">
+                        <svg>
+                            <use href="#arrowRight"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+        <div class="main-develop__subtitle">
+            <span>Мы работаем на лучших ингредиентах в косметике</span>
+            и добавляем их в достаточном количестве чтобы решить все ваши проблемы кожи и волос, которые вы укажите на
+            онлайн диагностике. Машинный алгоритм рассчитает вашу персональную формулу косметики за 5 минут.
+        </div>
+
+        <h2>
+            Вы получаете продукт-совершенство
+        </h2>
+    </section>
+
+    <section class="main-order">
+        <div class="main-order__imgContainer">
+            <img src="./assets/images/main/orderBg.jpg" alt="#">
+        </div>
+        <h2>Как заказать свою
+            персонализированную
+            косметику?
+        </h2>
+    </section>
+
+    <section class="main-list">
+        <ul>
+            <li>
+                <div class="main-list__imgContainer">
+                    <img src="./assets/images/main/list1.jpg" alt="#">
+                </div>
+                <h2>
+                    1
+                </h2>
+                <p>
+                    Вы проходите online диагностику
+                    на сайте (займет не более 3-х минут) и рассказываете о состоянии и проблемах Ваших волос или кожи
+                </p>
+            </li>
+
+            <li>
+                <div class="main-list__imgContainer">
+                    <img src="./assets/images/main/list2.jpg" alt="#">
+                </div>
+                <h2>
+                    2
+                </h2>
+                <p>
+                    Наша IT-платформа рассчитывает Вашу уникальную формулу с индивидуально подобранными активными
+                    ингредиентами,
+                    которые требуются для Ваших волос и кожи
+                </p>
+            </li>
+
+            <li>
+                <div class="main-list__imgContainer">
+                    <img src="./assets/images/main/list3.jpg" alt="#">
+                </div>
+                <h2>
+                    3
+                </h2>
+                <p>
+                    Вы указываете свое ИМЯ, которое мы нанесем на этикетку Вашей персонализированной косметики,
+                    оплачиваете заказ online
+                </p>
+            </li>
+
+            <li>
+                <div class="main-list__imgContainer">
+                    <img src="./assets/images/main/list4.jpg" alt="#">
+                </div>
+                <h2>
+                    4
+                </h2>
+                <p>
+                    Мы создаем в лаборатории индивидуальный продукт
+                    на основе Вашего рецепта
+                    и наносим Ваше имя на этикетку
+                </p>
+            </li>
+
+            <li>
+                <div class="main-list__imgContainer">
+                    <img src="./assets/images/main/list5.jpg" alt="#">
+                </div>
+                <h2>
+                    5
+                </h2>
+                <p>
+                    Отправляем Вам заказ на следующий день после оплаты. Доставляем посылку персонализированной
+                    косметики в уникальной упаковке с Вашим именем прямо до Вашей двери в удобное для Вас время
+                    (доставка займет 1—3 дня по Москве)
+                </p>
+            </li>
+
+            <li>
+                <div class="main-list__imgContainer">
+                    <img src="./assets/images/main/list6.jpg" alt="#">
+                </div>
+                <h2>
+                    6
+                </h2>
+                <p>
+                    Поддерживаем online 24/7: даем стратегию ухода для получения максимального результата и рекомендации
+                    по использованию
+                </p>
+            </li>
+
+        </ul>
+    </section>
+
+    <section class="main-createFormule">
+        <div class="main-createFormule__imgContainer">
+            <img src="./assets/images/main/formula.jpg" alt="#">
+        </div>
+        <div class="main-createFormule__container">
+            <h2>
+                Получите
+                свою уникальную
+                формулу красоты
+                за 5 минут
+                прямо сейчас
+            </h2>
+    
+            <button class="brownBtn">
+                Создать
+                <span>личную</span>
+                формулу
+            </button>
         </div>
     </section>
 </div>
