--- a/src/index.html
+++ b/src/index.html
@@ -134,13 +134,66 @@
     </section>
 
     <section class="main-order">
-        <div class="main-order__imgContainer">
-            <img src="./assets/images/main/orderBg.jpg" alt="#">
+
+        <div class="swiper orderSwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="main-order__imgContainer">
+                    <img src="./assets/images/main/orderBg.jpg" alt="#">
+                </div>
+                <h2>Как заказать свою
+                    персонализированную
+                    косметику?
+                </h2>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-order__imgContainer">
+                    <img src="./assets/images/main/orderBg.jpg" alt="#">
+                </div>
+                <h2>Как заказать свою
+                    персонализированную
+                    косметику?
+                </h2>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-order__imgContainer">
+                    <img src="./assets/images/main/orderBg.jpg" alt="#">
+                </div>
+                <h2>Как заказать свою
+                    персонализированную
+                    косметику?
+                </h2>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-order__imgContainer">
+                    <img src="./assets/images/main/orderBg.jpg" alt="#">
+                </div>
+                <h2>Как заказать свою
+                    персонализированную
+                    косметику?
+                </h2>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-order__imgContainer">
+                    <img src="./assets/images/main/orderBg.jpg" alt="#">
+                </div>
+                <h2>Как заказать свою
+                    персонализированную
+                    косметику?
+                </h2>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-order__imgContainer">
+                    <img src="./assets/images/main/orderBg.jpg" alt="#">
+                </div>
+                <h2>Как заказать свою
+                    персонализированную
+                    косметику?
+                </h2>
+              </div>
+            </div>
+            <div class="swiper-paginationOrder"></div>
         </div>
-        <h2>Как заказать свою
-            персонализированную
-            косметику?
-        </h2>
     </section>
 
     <section class="main-list">
@@ -674,7 +727,11 @@
                     </div>
                 </form>
 
-                <div class="main-sell__popapLeft"></div>
+                <button id="crossIcoLeft">
+                    <svg>
+                        <use href="#cross"></use>
+                    </svg>
+                </button>
             </div>
 
             <div class="main-sell__popapRight">
