--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
     </section>
 
     <section class="main-runString">
-        <div class="main-runString__staticText">
+        <h2 class="main-runString__staticText">
             100% без
-        </div>
+        </h2>
         <div class="main-runString__runString">
             <ul>
                 <li>аллергенов</li>
@@ -348,7 +348,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="videoContainer">
-                                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0stc0duKiHs"
+                                <iframe src="https://www.youtube.com/embed/0stc0duKiHs"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
@@ -360,7 +360,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="videoContainer">
-                                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0stc0duKiHs"
+                                <iframe src="https://www.youtube.com/embed/0stc0duKiHs"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
@@ -371,7 +371,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="videoContainer">
-                                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0stc0duKiHs"
+                                <iframe src="https://www.youtube.com/embed/0stc0duKiHs"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
@@ -382,7 +382,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="videoContainer">
-                                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0stc0duKiHs"
+                                <iframe src="https://www.youtube.com/embed/0stc0duKiHs"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
@@ -648,7 +648,7 @@
         </div>
     </section>
 
-    <section class="main-sellRunLine">
+    <div class="main-sellRunLine">
         <div class="main-sellRunLine__helper">
             <ul>
                 <li>Акция</li>
@@ -670,7 +670,7 @@
                 <li>Акция</li>
             </ul>
         </div>
-    </section>
+    </div>
 
     <section class="main-sell">
         <div class="main-sell__contentContainer">
@@ -747,7 +747,7 @@
 
     </section>
 
-    <section class="main-sellRunLine">
+    <div class="main-sellRunLine">
         <div class="main-sellRunLine__helper">
             <ul>
                 <li>Акция</li>
@@ -769,7 +769,7 @@
                 <li>Акция</li>
             </ul>
         </div>
-    </section>
+    </div>
 
     <section class="main-tester">
         <div class="main-tester__content">
@@ -804,12 +804,12 @@
 
             <div class="main-offline__rightContainer">
                 <h2>
-                    <p>Оффлайн вы можете пройти бесплатную диагностику
+                    <span>Оффлайн вы можете пройти бесплатную диагностику
                         с экспертом и получить персонализированное средство в наших салонах-партнерах по предварительной
-                        записи.</p>
+                        записи.</span>
 
-                    <p>Выберите на карте
-                        и запишитесь в удобное время.</p>
+                    <span>Выберите на карте
+                        и запишитесь в удобное время.</span>
 
                 </h2>
 
